--- a/tailwind.css
+++ b/tailwind.css
@@ -54,3 +54,23 @@
     --dot-progress: 100%
   }
 }
+
+.table-zebra thead{
+  background-color: #F1EEEE;
+}
+
+.table-zebra tr:nth-child(odd){
+  background-color: #FFFFFF;
+}
+
+.table-zebra tr:nth-child(even){
+  background-color: #F1EEEE;
+}
+
+.table-zebra input:nth-child(odd){
+  background-color: #F1EEEE;
+}
+
+.table-zebra input:nth-child(even){
+  background-color: #FFFFFF;
+}
